gccida/g2/build_index_type
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_index_type/src/tree.c:4281:61: error: expected expression
v4->int_cst.int_cst = *( $A887AD9C3C6C8CC7716950D571F57C9D *)&v7->block.vars; 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_index_type/src/tree.c:4281:26: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
v4->int_cst.int_cst = *( $A887AD9C3C6C8CC7716950D571F57C9D *)&v7->block.vars; 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_index_type/src/obj/tree.o] Error 1
